[tool.poetry]
name = "movie-rec-system"
version = "0.1.0"
description = ""
authors = ["jpjon <jonathanphan@berkeley.edu>", "Laura <laura@ploomber.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
duckdb = "0.8.1"
requests = "^2.31"
pandas = "2.1.0"
matplotlib = "3.6.0"
python-dotenv="1.0.0"
ploomber = "0.22.4"
jupysql = "0.10.0"
duckdb-engine = "0.9.2"
scikit-learn = "1.3.0"
fastapi = "^0.103.0"
pytest = "7.4.0"
uvicorn = "0.23.2"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
